solved header issue/overflow

--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ Version: 1.0
 */
 
 html, body {
-	/*height: 100%;*/
-	/*min-height: 100%;*/
-	overflow-x: hidden;
+/*	height: 100%;
+	min-height: 100%;
+	overflow-x: visible;*/
 	/*overflow-y: scroll;  has to be scroll, not auto */
-	-webkit-overflow-scrolling: touch;		
+	/*-webkit-overflow-scrolling: touch; */	
 }
 
 body {
